<resources>
    <string name="app_name">BusinessCards</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_emprego">Emprego</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor do Cartão</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="label_show_success">Cartão cadastrado com sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>